TestSuite/PascalABCTests/errors/err0004.pas
var a : integer;
begin
a := @a;
end.